Closed
Bug 213465
Opened 22 years ago
Closed 22 years ago
There is no way to collapse the space below a caption when giving a margin-top to a table.
Categories
(Core :: Layout: Tables, defect, P3)
Core
Layout: Tables
Tracking
()
RESOLVED
FIXED
mozilla1.5beta
People
(Reporter: kisaragi_24, Assigned: dbaron)
Details
(Whiteboard: [patch])
Attachments
(2 files)
1.51 KB,
text/html
|
Details | |
10.31 KB,
patch
|
bernd_mozilla
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.5a) Gecko/20030721 Mozilla Firebird/0.6
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.5a) Gecko/20030721 Mozilla Firebird/0.6
When applying such a stylesheet:
table {
margin-top: 2em;
margin-bottom: 2em;
}
If a table has a caption, Mozilla puts a 2em-space between the caption and the
body of the table.
However, the space is not collapsed even when applying a negative value to the
margin-bottom of the caption, so perplexed when writing a page that includes
tables with captions and ones with no captions.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Expected Results:
A caption is always contained within table borders, or make it possible to apply
negative values to the table-body-side margin of the caption element.
(IE and Opera seem to consider a caption is always within table borders, so it
does not have margins)
![]() |
Reporter | |
Comment 1•22 years ago
|
||
A sample html.
Assignee | ||
Comment 2•22 years ago
|
||
Assignee | ||
Updated•22 years ago
|
Attachment #128289 -
Flags: review?(bernd.mielke)
Assignee | ||
Comment 3•22 years ago
|
||
Taking.
Assignee: table → dbaron
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 98 → All
Priority: -- → P3
Hardware: PC → All
Whiteboard: [patch]
Target Milestone: --- → mozilla1.5beta
Attachment #128289 -
Flags: review?(bernd.mielke) → review+
Assignee | ||
Updated•22 years ago
|
Attachment #128289 -
Flags: superreview?(roc+moz)
Attachment #128289 -
Flags: superreview?(roc+moz) → superreview+
Assignee | ||
Comment 4•22 years ago
|
||
Fix checked in to trunk, 2003-07-23 16:04 -0700.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 5•22 years ago
|
||
It works well on Mozilla {Build ID: 2003072404}.
Thank you.
You need to log in
before you can comment on or make changes to this bug.
Description
•