Make margins between tables and captions collapse correctly when negative margins are involved.  b=213465  r=bernd  sr=roc